--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,6 @@
 #Minecraft server properties
-#Sun Apr 15 19:44:46 CEST 2018
+#Sun Apr 29 19:58:29 CEST 2018
+spawn-protection=0
 max-tick-time=60000
 generator-settings=
 force-gamemode=true
@@ -16,7 +17,7 @@ snooper-enabled=true
 level-type=DEFAULT
 hardcore=false
 enable-command-block=false
-max-players=1
+max-players=5
 network-compression-threshold=256
 resource-pack-sha1=
 max-world-size=29999984
@@ -35,5 +36,5 @@ max-build-height=256
 level-seed=
 prevent-proxy-connections=false
 use-native-transport=true
-enable-rcon=false
 motd=VPS MC Server
+enable-rcon=false
